# picalc_win32

./: .gitignore  BUILD.gn  Makefile  README.md  buildall.sh  clang_format.sh  picalc.iss  picalc_win32.iss
assets/: buildwavs.sh
assets/args/: NT4.gn  debug_x64.gn  debug_x86.gn  shared_gmp.gn  x64_avx-512.gn  x64_avx.gn  x64_avx2.gn  x64_sse2.gn  x64_sse3.gn  x64_sse41.gn  x64_sse42.gn  x86_mmx.gn  x86_sse.gn  x86_sse2.gn  x86_sse3.gn  x86_sse41.gn  x86_sse42.gn  x86_x87.gn
src/: constants.h  controls.cc  controls.h  cpu.cc  cpu.h  framework.h  globals.h  main.cc  main.h  mem.cc  mem.h  picalc.cc  picalc.h  picalc.rc  resource.h  results.cc  results.h  strings.cc  strings.h  sysmon.cc  sysmon.h  utils.cc  utils.h  version.h
src/logging/: BUILD.gn  console.cc  file_util.cc  file_util.h  logging_base.h
src/res/: picalc.manifest
