# Copyright 2026 Alex313031

executable("picalc_win32") {
  configs += [
    ":picalc_win32_config",
    "./src/logging:pilogger_config",
    "//src/gmp-ninja:gmp_public_config",
  ]
  precompiled_header = "src/framework.h"
  precompiled_source = "src/pch.cc"
  sources = [
    "src/constants.h",
    "src/controls.cc",
    "src/controls.h",
    "src/framework.h",
    "src/globals.h",
    "src/main.cc",
    "src/main.h",
    "src/picalc.cc",
    "src/picalc.h",
    "src/picalc.rc",
    "src/resource.h",
    "src/strings.h",
    "src/utils.cc",
    "src/utils.h",
    "src/version.h",
  ]
  public_deps = [
    "//src/gmp-ninja:gmp_static",
  ]
  deps = [
    "src/logging:pilogger",
    "//src/gmp-ninja:libgmpxx_static",
  ]
  output_name = "picalc"
}

config("picalc_win32_config") {
  defines = []
  cflags = []
  include_dirs = [ "./src", ]
  cflags += [
    "-Wunused-function",
  ]
  libs = [
    "kernel32",
    "user32",
    "shell32",
    "comctl32",
    "comdlg32",
    "gdi32",
    "winmm",
  ]
}
