# Copyright 2026 Alex313031

declare_args() {
  use_gmp_dll = false
}

executable("picalc_win32") {
  configs += [
    ":picalc_win32_config",
  ]
  precompiled_header = "src/framework.h"
  precompiled_source = "src/pch.pch"
  sources = [
    "src/constants.h",
    "src/controls.cc",
    "src/controls.h",
    "src/cpu.cc",
    "src/cpu.h",
    "src/framework.h",
    "src/globals.h",
    "src/main.cc",
    "src/main.h",
    "src/mem.cc",
    "src/mem.h",
    "src/picalc.cc",
    "src/picalc.h",
    "src/picalc.rc",
    "src/resource.h",
    "src/results.cc",
    "src/results.h",
    "src/strings.cc",
    "src/strings.h",
    "src/sysmon.cc",
    "src/sysmon.h",
    "src/utils.cc",
    "src/utils.h",
    "src/version.h",
  ]

  public_deps = []
  deps = [ "src/logging:pilogger", ]
  if (use_gmp_dll) {
    public_deps += [ "//src/gmp-ninja:gmp_shared", ]
    deps += [ "//src/gmp-ninja:libgmp", ]
  } else {
    public_deps += [ "//src/gmp-ninja:gmp_static", ]
    deps += [ "//src/gmp-ninja:libgmp_static", ]
  }
  output_name = "picalc"
}

config("picalc_win32_config") {
  configs = [
    "./src/logging:pilogger_config",
    "//src/gmp-ninja:gmp_public_config",
  ]
  defines = []
  cflags = []
  include_dirs = [ "./src", ]
  cflags += [
    "-Wunused-function",
  ]
  libs = [
    "kernel32",
    "user32",
    "shell32",
    "comctl32",
    "comdlg32",
    "gdi32",
    "winmm",
  ]
}
