# Copyright 2026 Alex313031

declare_args() {
  use_gmp_dll = false
}

executable("picalc_win32") {
  configs += [
    ":picalc_win32_config",
  ]
  precompiled_header = "src/framework.h"
  precompiled_source = "src/pch.pch"
  sources = [
    "src/constants.h",
    "src/controls.cc",
    "src/controls.h",
    "src/cpu.cc",
    "src/cpu.h",
    "src/framework.h",
    "src/globals.h",
    "src/main.cc",
    "src/main.h",
    "src/mem.cc",
    "src/mem.h",
    "src/picalc.cc",
    "src/picalc.h",
    "src/picalc.rc",
    "src/resource.h",
    "src/results.cc",
    "src/results.h",
    "src/strings.cc",
    "src/strings.h",
    "src/sysmon.cc",
    "src/sysmon.h",
    "src/utils.cc",
    "src/utils.h",
    "src/version.h",
  ]

  public_deps = []
  deps = [ "src/logging:pilogger", ]
  if (use_gmp_dll) {
    public_deps += [ "//src/gmp-ninja:gmp_shared", ]
    deps += [ "//src/gmp-ninja:libgmp", ]
  } else {
    public_deps += [ "//src/gmp-ninja:gmp_static", ]
    deps += [ "//src/gmp-ninja:libgmp_static", ]
  }
  if (!use_mmx && !use_sse && !use_sse2) {
    output_name = "picalc_x87"
  } else if (use_mmx && !use_sse && !use_sse2) {
    output_name = "picalc_mmx"
  } else if (use_sse && !use_sse2) {
    output_name = "picalc_sse"
  } else if (use_sse2 && !use_sse3) {
    output_name = "picalc_sse2"
  } else if (use_sse3 && !use_sse41) {
    output_name = "picalc_sse3"
  } else if (use_sse41 && !use_sse42) {
    output_name = "picalc_sse41"
  } else if (use_sse42 && !use_avx) {
    output_name = "picalc_sse42"
  } else if (use_avx && !use_avx2) {
    output_name = "picalc_avx"
  } else if (use_fma && !use_avx && !use_avx2) {
    output_name = "picalc_fma"
  } else if (use_aes && !use_avx && !use_avx2) {
    output_name = "picalc_aes"
  } else if (use_avx2 && !use_avx512) {
    output_name = "picalc_avx2"
  } else if (use_avx512) {
    output_name = "picalc_avx512"
  } else {
    output_name = "picalc"
  }
  if (is_debug || dcheck_enabled) {
    output_name += "_debug"
  }
}

config("picalc_win32_config") {
  configs = [
    "./src/logging:pilogger_config",
    "//src/gmp-ninja:gmp_public_config",
  ]
  defines = []
  cflags = []
  include_dirs = [ "./src", ]
  cflags += [
    "-Wunused-function",
  ]
  libs = [
    "kernel32",
    "user32",
    "shell32",
    "comctl32",
    "comdlg32",
    "gdi32",
    "winmm",
  ]
}
