# Target OS/Architecture
target_os = "win"
target_cpu = "x64"

# Debug/Release Flags
is_debug = false
dcheck_enabled = false
is_official_build = true

# C++ Standard to use
cpp_std = "17"

c_std = "99"

# Target Windows version.
winver = "6.0"

# Whether to enable common controls
use_common_controls = true

# Whether to use -Wl,--large-address-aware which is same as MSVC /LARGEADDRESSAWARE
large_address_aware = true

use_sse2 = true
use_sse3 = true
use_sse41 = true
use_sse42 = true
use_avx = true
use_aes = true
use_avx2 = true
use_fma = true
use_avx512 = false

# Use .asm SIMD intrinsics up to settings above
gmp_use_asm = true

# Use shared libgmp.dll instead of static lib
use_gmp_dll = false
